--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,40 @@
     --button-filer-text: #4D5AE5;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+img {
+    display: block;
+}
+
+ul,
+ol {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 body {
     color: var(--text-color-main);
     font-family: 'Roboto', sans-serif;
@@ -23,6 +57,10 @@ body {
 
 .header-section {
     font-family: "Raleway", "Roboto", sans-serif;
+    border-bottom: 1px solid #e7e9fc;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
 }
 
 .navigation {
@@ -41,20 +79,35 @@ body {
 
 .hero-section {
     background-color: #2E2F42;
+    display: flex;
+    justify-content: center;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .hero-section .hero-title {
     font-family: 'Roboto';
+    margin: 0 auto;
+    display: block;
+    text-align: center;
     font-style: normal;
     font-weight: 700;
     font-size: 56px;
     letter-spacing: 0.02em;
     color: white;
-    line-height: 1.07
+    line-height: 1.07;
+    max-width: 496px;
+
+
 }
 
 .button-hero {
     background: #4D5AE5;
+    display: block;
+    margin: 0 auto;
+    border-radius: 4px;
+    min-width: 169px;
+    height: 56px;
     font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 500;
@@ -64,7 +117,9 @@ body {
     color: #FFFFFF;
     border: none;
     cursor: pointer;
-
+    padding: 16px 32px;
+    align-items: flex-start;
+    margin-top: 64px;
 }
 
 .button-hero:hover,
@@ -101,6 +156,8 @@ body {
 
 .footer {
     background: #2E2F42;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .logo-link {
@@ -148,6 +205,9 @@ body {
 
 .staff-item {
     background-color: #FFFFFF;
+    width: calc((100% - 3 * 24px) / 4);
+    border-radius: 0px 0px 4px 4px;
+
 }
 
 .list {
@@ -183,29 +243,32 @@ body {
     list-style: none;
 }
 
-.list .port-button {
+.port-button {
+    background: #F4F4FD;
+    border: 1px solid #E7E9FC;
+    color: var(--primary-blue-color);
     font-family: "Roboto", sans-serif;
-    font-style: normal;
     font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #4D5AE5;
-    background-color: #F4F4FD;
-    border-color: #E7E9FC;
     cursor: pointer;
+    padding: 12px 24px 12px;
+    border-radius: 4px;
+    color: #404BBF;
+
 }
 
 .port-button:hover,
 .port-button:focus {
     background-color: #404BBF;
-    color: #FFFFFF;
-    border: none;
+    color: white;
+    border: 1px solid transparent;
 }
 
 .hero-title {
     line-height: 1.07;
     text-align: center;
+    align-items: center;
 }
 
 .img-title {
@@ -214,6 +277,7 @@ body {
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
 }
 
 .links {
@@ -225,6 +289,7 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--background-color-dark);
+    padding: 24px 0;
 }
 
 .list .links:hover,
@@ -258,7 +323,8 @@ body {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--text-color-headline)
+    color: var(--text-color-headline);
+    margin-bottom: 8px;
 }
 
 .text {
@@ -269,4 +335,167 @@ body {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+
+}
+
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    align-items: center;
+
+}
+
+.address-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    margin-left: auto;
+    align-items: center;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+}
+
+.logo-link {
+    display: flex;
+    align-items: center;
+    margin-right: 76px
+}
+
+.studio-dark {
+    display: flex;
+    align-items: center;
+}
+
+.li-item {
+    width: calc((100% - 3 * 24px) / 4);
+}
+
+.img-list {
+    flex-direction: row;
+    display: flex;
+    gap: 24px;
+    list-style: none;
+}
+
+.adv-list {
+    flex-direction: row;
+    display: flex;
+    gap: 24px;
+    list-style: none;
+}
+
+.team-list {
+    flex-direction: row;
+    display: flex;
+    gap: 24px;
+    list-style: none;
+}
+
+.team-container {
+    padding: 32px 16px;
+    text-align: center;
+
+}
+
+.header-item {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    list-style: none;
+    font-weight: 500;
+}
+
+.wawd-item {
+    width: calc((100% - 2 * 24px) / 3);
+}
+
+.footer-link {
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    display: inline-block;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    flex: none;
+    text-decoration: 0;
+    color: #4D5AE5;
+    margin-bottom: 16px;
+}
+
+.footer-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 264px;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+}
+
+.but-list {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    gap: 24px;
+    margin-bottom: 72px;
+}
+
+.portfolio {
+    padding: 96px 0 120px 0;
+}
+
+.all-list {
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.all-item {
+    width: calc((100% - 48px) / 3);
+}
+
+.image-link {
+    text-decoration: none;
+}
+
+.img-all {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.all-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
+.section-wawd {
+    padding-top: 0;
 }
